# FoW_Suite_Light

./: .gitignore.txt  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
FoW_Suite_LIGHT/: README.md  __init__.py
FoW_Suite_LIGHT/backend/nodes/: ConditionFunnelLight.py  ConditionWeight.py  ContentVillain.py  ContentWeight.py  DefinitionWeight.py  DetailsWeight.py  DynamicWeight.py  PromptFusionLight.py  PromptRefinerLight.py  PromptSplitterLight.py  ShotAgent.py  ShotWeight.py  StaticVillain.py  StyleAgent.py  StyleVillain.py  (+2 more)
FoW_Suite_LIGHT/config/: __init__.py  category.py
FoW_Suite_LIGHT/docs/: LICENSE.md
backend/nodes/: ConditionFunnelLight.py  ConditionWeight.py  ContentVillain.py  ContentWeight.py  DefinitionVillain.py  DefinitionWeight.py  DetailAgent.py  DetailsWeight.py  DynamicWeight.py  EnvironmentWeight.py  PromptFusionLight.py  PromptFusionNegative.py  PromptRefinerLight.py  PromptSplitterLight.py  ShotAgent.py  ShotWeight.py  StaticVillain.py  StaticWeight.py  StyleAgent.py  StyleVillain.py  StyleWeight.py  SubjectWeight.py  TextWeight.py  __init__.py  base_agent.py  base_villain.py  base_weight.py
config/: ConfigManager.py  __init__.py  category.py  config.json  constants.py
docs/: CHANGELOG.md  LICENSE.md
docs/HoW to FoW Suite/: CONTRIBUTING.md  Commenting.md  Development_Journey.md  DirectoryPaths.md  FAQ.md  GUIDE.md  GamersCorner.md  Glossary.md  Legends.md  ProTips.md  Troubleshooting.md
frontend/js/: ConditionFunnelLightUI.js  PromptFusionLightUI.js  PromptFusionNegativeUI.js  PromptSplitterLightUI.js
(+29 files in other folders)
