[project]
name = "fow_suite_light"
description = "oW_Suite_LIGHT is the beginner-friendly version of the 'FoW' (Force Of Will) suite for ComfyUI, featuring PromptRefinerLight as the flagship node for simple prompt creation. It helps low-spec users craft raw prompts and collaborate with high-spec users for image generation, with a light, stable design—no tokenization or weighing, perfect for newbies! I developed it as my first coding project in 2 months, learning ComfyUI’s capabilities along the way."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/SirWillance/FoW_Suite_LIGHT"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "FoW_Suite_LIGHT"
Icon = ""
